# Precision_demotion_tool

./: .gitignore  CMakeLists.txt  README.md  design.md  implementation.md  package-lock.json  package.json
backend/: package-lock.json  package.json  server.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
include/: PrecisionInfo.h  PrecisionTypes.h  PropagationEngine.h  Utils.h
results/: evaluation.csv
scripts/: dev.mjs
src/: Benchmark.cpp  PrecisionPropagator.cpp  Verifier.cpp  main.cpp  verify.cpp
temp/: bf16_check.cpp  bf16_pass_candidate.cpp  bf16_pass_candidate.dot  bf16_pass_candidate.json  csv_schema_check.json  kernel1_ast.dot  kernel4_ast.dot  mykernel2_ast.dot  mykernel_ast.dot  original.cpp  web_test_result.json
temp/verify____backend_jobs_05127f70-77ed-4ed6-9639-063eb1efafee_dsp_iir_biquad_cpp_13631/: demoted.out  original.out
temp/verify____backend_jobs_0ba06b18-a10e-47a0-9702-8d4c14a0f02a_dsp_iq_power_cpp_14452/: demoted.cpp  demoted.out  original.cpp  original.out
temp/verify____backend_jobs_160e861d-4e9d-4795-8daf-30164bd8e476_mykernel3_cpp_300754/: demoted.cpp  original.cpp
temp/verify____backend_jobs_16100291-9311-4ea1-a259-ecfd79ef1c96_kernel_cpp_293198/: demoted.cpp  demoted.out  original.cpp
temp/verify____backend_jobs_1ab7d061-9eef-4e7d-ba30-33aa41202184_smoke_cpp_31862/: demoted.cpp  demoted.out  original.cpp  original.out
temp/verify____backend_jobs_1fb3d491-6e71-44ee-ac3e-256b3c221358_kernel4_cpp_19601/: demoted.cpp  (+2 more)
test/: kernel5.cpp  ml_dot_product.cpp  ml_layer_norm.cpp
(+85 files in other folders)
